implement http port to create a topic #22
